--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -7,32 +7,55 @@
   min-height: 100%;
 }
 body {
-	text-align:center; min-width:600px;
+  text-align:center; min-width:600px;
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
 
 #pagebox { 
-	text-align:left; width:600px; margin-left:auto; margin-right:auto; 
+  text-align:left; width:600px; margin-left:auto; margin-right:auto; 
 }
 
 nav {
-	font-family: 'Monserrat', Helvetica, sans-serif; 
+  font-family: 'Monserrat', Helvetica, sans-serif; 
 }
 
 h1 {
-	font-family: 'Montserrat', Helvetica, sans-serif;
+  font-family: 'Montserrat', Helvetica, sans-serif;
 }
 
 p {
-	font-family: 'Montserrat', Helvetica, sans-serif;
+  font-family: 'Montserrat', Helvetica, sans-serif;
 }
 
-.my-image {
+.carousel-caption h3{
+  opacity: 0.7;
+  font-family: 'Montserrat', Helvetica, sans-serif;
+  font-size: 3em;
+  padding-top: 5%;
+  margin-top: -40%;
+}
+
+.carousel-caption p {
+  opacity: 0.7;
+  font-family: 'Montserrat', Helvetica, sans-serif;
+  font-size: 2em;
+  padding-top: 30%;
+  margin-bottom: 10%;
+}
+
+
+.footer {
+  font-family: 'Montserrat', Helvetica, sans-serif;
+  position: absolute;
+  bottom: 0;
   width: 100%;
-  height: 100%;
-}
+  /* Set the fixed height of the footer here */
+  height: 60px;
+  background-color: lightgray;
+  text-align: center;
 
+}
 
 
 
