--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,3 +1,5 @@
+<div id="about">
+
 <h1>About Us</h1>
 
 <h2>We are here for all of your bicycle needs in Berlin!</h2>
@@ -13,3 +15,4 @@
 
 
 <p>Find me in app/views/static_pages/about.html.erb</p>
+</div>
