--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -66,8 +66,13 @@
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
-<div id="pagebox">
 
+
+<div id="pagebox">
+<%= image_tag("penny_farthing_bicycle.png", class: "bike-image img-responsive") %>
+<%= image_tag("bigwheels.jpg", class: "bike-image img-responsive") %>
+<%= image_tag("orangebike.jpg", class: "bike-image img-responsive") %>
+<%= image_tag("yellowbike.jpg", class: "bike-image img-responsive") %>
 <%= yield %>
 </div><!-- /pagebox -->
 <footer class="footer">
@@ -79,7 +84,6 @@
 <a href="https://twitter.com/khazelton_77" class="twitter-follow-button" data-show-count="false">Follow @khazelton_77</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
   </div>
-
 
 
 </footer>
