add size to image tags

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -28,6 +28,9 @@ p {
   font-family: 'Montserrat', Helvetica, sans-serif;
 }
 
+.bike-image {
+  width: 50%;
+}
 
 .carousel-caption h3{
   opacity: 0.7;
