--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -23,11 +23,11 @@
     <%= f.label :image_url %><br>
     <%= f.text_field :image_url %>
   </div>
-  <div class="actions">
+  <div class="actions"><br>
     <%= f.submit %>
   </div>
   <div class="field">
-    <%= f.label :color %>
+    <%= f.label :color %><br>
     <%= f.text_field :color %>
   </div>
 <% end %>
