--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -23,16 +23,11 @@
     <%= f.label :image_url %><br>
     <%= f.text_field :image_url %>
   </div>
-  <div class="actions"><br>
-    <%= f.submit %>
-  </div>
   <div class="field">
-<<<<<<< HEAD
     <%= f.label :color %><br>
-    <%= f.text_field :color %>
-=======
-    <%= f.label :colour %>
-    <%= f.text_field :colour %>
->>>>>>> 565588a05b58326281edf31bb0930ea03a500af3
+    <%= f.text_area :color %> 
+  </div>
+  <div class="actions">
+    <%= f.submit %>
   </div>
 <% end %>
